--- a/templates/default/fail2ban.conf.erb
+++ b/templates/default/fail2ban.conf.erb
@@ -1,38 +1,44 @@
-# Fail2Ban configuration file
+# Fail2Ban main configuration file
 #
-# Author: Cyril Jaquier
+# Comments: use '#' for comment lines and ';' (following a space) for inline comments
 #
-# $Revision$
+# Changes:  in most of the cases you should not modify this
+#           file, but provide customizations in fail2ban.local file, e.g.:
+#
+# [Definition]
+# loglevel = DEBUG
 #
 
 [Definition]
 
-# Option:  loglevel
-# Notes.:  Set the log level output.
-#          1 = ERROR
-#          2 = WARN
-#          3 = INFO
-#          4 = DEBUG
-# Values:  NUM  Default:  3
+# Option: loglevel
+# Notes.: Set the log level output.
+#         CRITICAL
+#         ERROR
+#         WARNING
+#         NOTICE
+#         INFO
+#         DEBUG
+# Values: [ LEVEL ]  Default: ERROR
 #
 loglevel = <%= node['fail2ban']['loglevel'] %>
 
-# Option:  logtarget
-# Notes.:  Set the log target. This could be a file, SYSLOG, STDERR or STDOUT.
-#          Only one log target can be specified.
-# Values:  STDOUT STDERR SYSLOG file  Default:  /var/log/fail2ban.log
+# Option: logtarget
+# Notes.: Set the log target. This could be a file, SYSLOG, STDERR or STDOUT.
+#         Only one log target can be specified.
+#         If you change logtarget from the default value and you are
+#         using logrotate -- also adjust or disable rotation in the
+#         corresponding configuration file
+#         (e.g. /etc/logrotate.d/fail2ban on Debian systems)
+# Values: [ STDOUT | STDERR | SYSLOG | FILE ]  Default: STDERR
 #
 logtarget = <%= node['fail2ban']['logtarget'] %>
-<% if node['fail2ban']['logtarget'] == "SYSLOG" -%>
-syslog-target = <%= node['fail2ban']['syslog_target'] %>
-syslog-facility = <%= node['fail2ban']['syslog_facility'] %>
-<% end -%>
 
 # Option: socket
 # Notes.: Set the socket file. This is used to communicate with the daemon. Do
 #         not remove this file when Fail2ban runs. It will not be possible to
 #         communicate with the server afterwards.
-# Values: FILE  Default:  /var/run/fail2ban/fail2ban.sock
+# Values: [ FILE ]  Default: /var/run/fail2ban/fail2ban.sock
 #
 socket = <%= node['fail2ban']['socket'] %>
 
@@ -42,3 +48,16 @@ socket = <%= node['fail2ban']['socket'] %>
 # Values: [ FILE ]  Default: /var/run/fail2ban/fail2ban.pid
 #
 pidfile = <%= node['fail2ban']['pidfile'] %>
+
+# Options: dbfile
+# Notes.: Set the file for the fail2ban persistent data to be stored.
+#         A value of ":memory:" means database is only stored in memory
+#         and data is lost when fail2ban is stopped.
+#         A value of "None" disables the database.
+# Values: [ None :memory: FILE ] Default: /var/lib/fail2ban/fail2ban.sqlite3
+dbfile = <%= node['fail2ban']['dbfile'] %>
+
+# Options: dbpurgeage
+# Notes.: Sets age at which bans should be purged from the database
+# Values: [ SECONDS ] Default: 86400 (24hours)
+dbpurgeage = 86400
